2008-06-22  Michael Natterer  <mitch@imendio.com>

	* *.c: remove trailing whitespace from newly added gtk-doc
	comments and reformatted some where they contained overly long or
	ill-formatted lines.

2008-06-22  Michael Natterer  <mitch@imendio.com>

	* *.c: moved includes back to the top of the files (before gtk-doc
	SECTION comments). Add "config.h" in all files and move system
	included before glib includes. Remove trailing whitespace from
	SECTION comments and did some reformatting where lines were overly
	long, no documentation content was changed.

2008-06-22  Stefan Kost  <ensonic@users.sf.net>

	* docs/reference/gobject/tmpl/gobject-unused.sgml:
	* gobject/gobject.h:
	* gobject/gtype.c:
	* gobject/gtype.h:
	  Move some content for gobject-unused.sgml and cleared empty entries.
	  The remaining 4 ones should be checked by some else. If they are not
	  needed. The file can be removed.

2008-06-22  Stefan Kost  <ensonic@users.sf.net>

	* docs/reference/gobject/tmpl/value_collection.sgml:
	* gobject/gvaluecollector.h:
	  Migrating docs.

2008-06-22  Stefan Kost  <ensonic@users.sf.net>

	* docs/reference/gobject/tmpl/value_arrays.sgml:
	* gobject/gvaluearray.c:
	* gobject/gvaluearray.h:
	  Migrating docs.

2008-06-22  Stefan Kost  <ensonic@users.sf.net>

	* gobject/gsignal.c:
	  Fix compiler warning in format string check.

2008-06-22  Stefan Kost  <ensonic@users.sf.net>

	* docs/reference/gobject/tmpl/signals.sgml:
	* gobject/gclosure.c:
	* gobject/gobject.c:
	* gobject/gsignal.c:
	* gobject/gsignal.h:
	  Migrating docs.

2008-06-22  Stefan Kost  <ensonic@users.sf.net>

	* docs/reference/gobject/Makefile.am:
	  Help poor little gtkdoc a bit and tell that it can ignore
	  G_GNUC_INTERNAL. Also disable including the unit-test header as this
	  causes warnings and we don't need it here.

2008-06-22  Stefan Kost  <ensonic@users.sf.net>

	* docs/reference/gobject/tmpl/param_value_types.sgml:
	* gobject/gboxed.c:
	* gobject/gboxed.h:
	* gobject/genums.c: